update OT Scripture (1013) for Winter 2015 (v7.5.0)

--- a/BSTH/1013.tex
+++ b/BSTH/1013.tex
@@ -1,46 +1,57 @@
-% -*- program: xelatex -*-
-% -*- pdf: BSTH_1013_Driver_F14 -*-
+% Copyright (c) 2015 by Daniel R. Driver.
+% !TEX encoding = UTF-8 Unicode
+% !TEX TS-program = XeLaTeX
 
 \documentclass[titlepage]{article}
-% clone the necessary input files: git@github.com:danieldriver/syllabus.git
+
+% This document presumes a file structure and set of inputs that are
+% available at: git@github.com:danieldriver/syllabi.git
+
 \newcommand\policy{../policy}
 \newcommand\incl{../includes}
 \input{\incl/variables}
 
-\coursecode[7.0]{BSTH 1013}
+\coursecode[7.5.0]{BSTH 1013}
 \coursetitle{Old Testament Scripture}
 
 % Previously taught as RLGS 1013 in:
-%   * Fall 2008
-%   * Winter 2009
-%   * Fall 2009
-%   * Winter 2010
-%   * Fall 2010
-%   * Winter 2011
+%   - Fall 2008
+%   - Winter 2009
+%   - Fall 2009
+%   - Winter 2010
+%   - Fall 2010
+%   - Winter 2011 (Fall 2011 was covered by Joel Lohr in a course release)
+%   - Winter 2012
+%   - Fall 2012
+%   - Winter 2013
 % Previously taught as BSTH 1013 in:
-%   * tk
+%   - Fall 2013
+%   - Winter 2014
+%   - Fall 2014
 
 \professor{Daniel R. Driver}
 \phone{416-226-6620 ext. 2201}
 \email{ddriver@tyndale.ca}
-\officehours{Mon. \& Thur., 1:30--3:30 \PM}
+\officehours{Mon. \& Wed., 1:30--3:30 \PM}
 
-\semester{Fall 2014}
-\meets{Tuesdays \& Thursdays} % \meets{on}{at}{in}
-      {3:45--5:05 \PM}
+\semester{Winter 2015}
+\meets{Thursdays}% \meets{on}{at}{in}
+      {8:15--11:05 \AM}
       {Ballyconnor 2087}
 \website{classes.tyndale.ca}
 \cdescription{% copy from tyndale.ca/registrar/calendar
-  Survey of the redemptive story in the three major divisions of the Old
-  Testament (the Law/Torah, the Prophets, and the Writings), including
-  an orientation to the historical backgrounds, religious context,
-  literary forms, apocryphal dimensions, prophetic elements, matters of
-  canon, text, interpretation, and critical issues.
 
-  {\itshape Note that this class is both a general studies requirement
-  and a prerequisite for advanced courses in Biblical Studies \&
-  Theology.}
-}
+	Survey of the redemptive story in the three major divisions of the
+	Old Testament (the Law/Torah, the Prophets, and the Writings),
+	including an orientation to the historical backgrounds, religious
+	context, literary forms, apocryphal dimensions, prophetic elements,
+	matters of canon, text, interpretation, and critical issues.
+
+	{\itshape Note that this class is both a general studies requirement
+	and a prerequisite for advanced courses in Biblical Studies \&
+	Theology.}
+
+}% end of course description
 
 \input{\incl/preamble}
 
@@ -53,28 +64,28 @@
 The learning outcomes in this course will be determined by each
 student's ability to meet specific goals (learning objectives). By the
 end of the course students should be able to:
-  name major Old Testament people and events;
-  identify representative biblical quotes by book and chapter;
-  give key dates for Israel's history and summarize the succession of superpowers in the Ancient Near Eastern political theatre from the time of Egypt to Greece;
-  locate a few important biblical sites on a map;
-  understand the general shape of the Masoretic Text tradition and differentiate it from other canonical orders and traditions;
-  recognize genres of biblical literature and cite examples from the reading;
-  list the Ten Commandments in order;
-  articulate multiple rationales for sabbath observance;
-  defend a decision to pronounce or circumlocute the divine name;
-  classify prophetic literature relative to the exile;
-  report on apparent parallels, synchronisms, tensions, and contradictions in and across the Law and the Prophets;
-  memorize and recite Psalm 8.
+	name major Old Testament people and events;
+	identify representative biblical quotes by book and chapter;
+	give key dates for Israel's history and summarize the succession of superpowers in the Ancient Near Eastern political theatre from the time of Egypt to Greece;
+	locate a few important biblical sites on a map;
+	understand the general shape of the Masoretic Text tradition and differentiate it from other canonical orders and traditions;
+	recognize genres of biblical literature and cite examples from the reading;
+	list the Ten Commandments in order;
+	articulate multiple rationales for sabbath observance;
+	defend a decision to pronounce or circumlocute the divine name;
+	classify prophetic literature relative to the exile;
+	report on apparent parallels, synchronisms, tensions, and contradictions in and across the Law and the Prophets;
+	memorize and recite Psalm 8.
 
 Students should also be able to identify settings in which the
 scriptures of Israel are read (notably the synagogue, church, and
 academy), employ terminology appropriate to these reading communities,
 recognize where their own biographies and commitments place them in
 relation to the Hebrew Bible/Old Testament and its uses, and monitor and
-test their individual attitudes and assumptions. They should be able
-to extend their awareness of the Bible's reading communities to the
-Bible's long history of reception. Finally, students should be able to
-infer what Jesus might have meant in speaking of ``the law of Moses, the
+test their individual attitudes and assumptions. They should be able to
+extend their awareness of the Bible's reading communities to the Bible's
+long history of reception. Finally, students should be able to infer
+what Jesus might have meant in speaking of ``the law of Moses, the
 prophets, and the psalms'' (Luke 24:44), and begin to hear claims about
 New Testament fulfilment of scripture in light of the unique voice that
 the Old Testament retains along side of the New in Christian scripture.
@@ -88,29 +99,33 @@ coursepack is available in class, directly from Dr. Driver.
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
 \begin{thebibliography}{Heschel}% use the longest item in the bibliography
-  \bibitem[NRSV]{nrsv} \emph{The New Oxford Annotated Bible with Apocrypha}.
-    Oxford: Oxford University Press, 2010 (4\textsuperscript{th}
-    edition). Many serviceable translations of the Bible exist, but I
-    assign the NRSV because it is a standard among biblical scholars. If
-    you do not already have a copy then you must purchase one for this
-    class.
-  \bibitem[Heschel]{heschel} Abraham Joshua Heschel.
-    \emph{The Sabbath: Its Meaning for Modern Man}. New York: Farrar,
-    Straus and Giroux, 1951 (repr. 2005). Read this classic example of
-    20\textsuperscript{th} century Jewish spirituality on your own, no
-    later than the fourth week of class. Review it in preparation for the
-    class on which it is assigned.
-  \bibitem[Moberly]{moberly} R.\,W.\,L. Moberly.
-    \emph{Old Testament Theology: Reading the Hebrew Bible as Christian
-    Scripture}. Grand Rapids: Baker Academic, 2013. Read these eight
-    essays by a leading Old Testament scholar and biblical theologian in
-    parallel with (but after completing) the assigned Bible readings.
-  \bibitem[OTSIC]{otsic} Daniel R. Driver.
-    \emph{\ctitle\ Introductory Coursepack}. Toronto, \csemester.
-    In response to the requests of many students I have compiled a pack
-    of notes for my lectures. I will circulate the relevant pages before
-    each class. It behooves you to gather, annotate, and study this
-    material carefully.
+
+	\bibitem[NRSV]{nrsv} \emph{The New Oxford Annotated Bible with
+	Apocrypha}. Oxford: Oxford University Press, 2010
+	(4\textsuperscript{th} edition). Many serviceable translations of
+	the Bible exist, but I assign the NRSV because it is a standard
+	among biblical scholars. If you do not already have a copy then you
+	must purchase one for this class.
+
+	\bibitem[Heschel]{heschel} Abraham Joshua Heschel. \emph{The
+	Sabbath: Its Meaning for Modern Man}. New York: Farrar, Straus and
+	Giroux, 1951 (repr. 2005). Read this classic example of
+	20\textsuperscript{th} century Jewish spirituality on your own, no
+	later than the fourth week of class. Review it in preparation for
+	the class on which it is assigned.
+
+	\bibitem[Moberly]{moberly} R.\,W.\,L. Moberly. \emph{Old Testament
+	Theology: Reading the Hebrew Bible as Christian Scripture}. Grand
+	Rapids: Baker Academic, 2013. Read these eight essays by a leading
+	Old Testament scholar and biblical theologian in parallel with (but
+	after completing) the assigned Bible readings.
+
+	\bibitem[OTSIC]{otsic} Daniel R. Driver. \emph{\ctitle\ Introductory
+	Coursepack}. Toronto, \csemester. In response to the requests of
+	many students I have compiled a pack of notes for my lectures. I
+	will circulate the relevant pages before each class. It behooves you
+	to gather, annotate, and study this material carefully.
+
 \end{thebibliography}
 \endgroup
 
@@ -120,7 +135,7 @@ coursepack is available in class, directly from Dr. Driver.
 Supplementary readings are listed in the bibliographies that follow each
 page of notes in the coursepack. Excerpts from this literature,
 ordinarily an article or a book chapter per week, will be available for
-download through the course website (alternately, some may be kept on
+download through the course website (alternately, some may be placed on
 reserve in the library). Students are not strictly required to read this
 supplementary material; then again, students who choose not to read it
 should not expect to get an A for the course.
@@ -138,26 +153,31 @@ make a special point of reviewing the supplementary articles.
 \label{structure}
 
 \begin{enumerate}
- \item At various points throughout the semester I will announce
-   \textbf{reading quizzes}. They are designed to ensure that you have
-   read the assigned material carefully, and may be administered online
-   (outside of class) or on paper (in class). Online quizzes are open
-   book, but they are timed and limited to a single attempt. Quizzes
-   given in class are closed book, and they may not be made up in the
-   case of absence.
- \item Students are to \textbf{memorize Psalm 8} in the King James
-   Version (KJV) and recite it to me privately, in my office, in the
-   fourth or fifth week of class. An online sign-up sheet will be posted
-   to the class website in week three.
- \item A \textbf{midterm exam} will be given in class as scheduled in
-   the course outline (Section~\ref{outline}). At the instructor's
-   option, it may include a take-home writing component.
- \item A comprehensive \textbf{final exam} will be held during the exam
-   period as schedule by the Registrar (see Section~\ref{exams}). It is
-   designed to assess learning outcomes, i.e., your attainment of the
-   objectives in Section~\ref{outcomes}. Test your readiness for the
-   final by asking yourself how well you can perform the tasks outlined
-   in those paragraphs.
+
+	\item At various points throughout the semester I will announce
+	\textbf{reading quizzes}. They are designed to ensure that you have
+	read the assigned material carefully, and may be administered online
+	(outside of class) or on paper (in class). Online quizzes are open
+	book, but they are timed and limited to a single attempt. Quizzes
+	given in class are closed book, and they may not be made up in the
+	case of absence.
+
+	\item Students are to \textbf{memorize Psalm 8} in the King James
+	Version (KJV) and recite it to me privately, in my office, in the
+	fourth or fifth week of class. An online sign-up sheet will be
+	posted to the class website in week three.
+
+	\item A \textbf{midterm exam} will be given in class as scheduled in
+	the course outline (Section~\ref{outline}). At the instructor's
+	option, it may include a take-home writing component.
+
+	\item A comprehensive \textbf{final exam} will be held during the
+	exam period as schedule by the Registrar (see Section~\ref{exams}).
+	It is designed to assess learning outcomes, i.e., your attainment of
+	the objectives in Section~\ref{outcomes}. Test your readiness for
+	the final by asking yourself how well you can perform the tasks
+	outlined in those paragraphs.
+
 \end{enumerate}
 
 The breakdown for the semester's total work is as follows:
@@ -198,93 +218,92 @@ The breakdown for the semester's total work is as follows:
 \section{Course Outline}
 \label{outline}
 
-Readings should be completed before the start of the class for which they are
-assigned. Primary readings (from scripture) and required secondary texts
-(Heschel and Moberly) are compulsory. Any supplementary readings that I
-circulate (per Section~\ref{supplementary}) will be keyed to the session
-number (listed under \textbf{\S} in Table~\ref{schedule}), and should ideally
-be read before class as well. We will adhere to the schedule as closely as
-possible, though I reserve the right to adjust it to suit the needs of the
-class.
+Readings should be completed before the start of the class for which
+they are assigned. Primary readings (from scripture) and required
+secondary texts (Heschel and Moberly) are compulsory. Any supplementary
+readings that I circulate (per Section~\ref{supplementary}) will be
+keyed to the session number (listed under \textbf{\S} in
+Table~\ref{schedule}), and should ideally be read before class as well.
+We will adhere to the schedule as closely as possible, though I reserve
+the right to adjust it to suit the needs of the class.
 
-\setcolumncount{4} % set up \sessioncount, \unit{} and \noclass{} macros
-\begin{table}[htb]
+\setcolumncount{4}% set up \sessioncount, \unit{}, \noclass{}, and \reminder{memo}{date} macros
+\begin{table}[htb]% add p to put the schedule on its own page
   \centering
-  \begin{tabular}{>{\sessioncount.}r@{ }llr}
-    \toprule
-    \sessionskip{\textbf{\S}.}&\textbf{Primary Reading or Event}&\textbf{Secondary Reading}&\textbf{Date}\\
-    \midrule
+  \begin{tabular}{>{\sessioncount.}r@{ }llr}% make sure the column config agrees with \setcolumncount
+	\toprule
+	\sessionskip{\textbf{\S}.}&\textbf{Primary Reading}&\textbf{Secondary Reading}&\textbf{Date}\\
+	\midrule
 
-    \unit{Beginnings} \\
+	\unit{Beginnings} \\
 
-          & Psalms 8, 74, 104               & Syllabus         &  4 Sep.     \\
-          
-          & Genesis 1--11                   & Heschel (begin)  &  9 Sep.     \\
-          & Genesis 12--36                  &                  & 11 Sep.     \\
-          
-          & Genesis 37--50                  &                  & 16 Sep.     \\
-          & Exodus 1--6, 32--34             &                  & 18 Sep.     \\ [1ex]
+		& Psalms 8, 74, 104               & Syllabus         &  8 Jan.        \\
 
-    \unit{Out of Egypt} \\
-          
-          & Exodus 7--24                    & Moberly 3        & 23 Sep.     \\
-          & Exodus 20, Deuteronomy 5        & Heschel (finish) & 25 Sep.     \\
-    \reminder{\textbf{Recitation of Psalm 8} (during Dr. Driver's office hours)}{\emph{from} 25 Sep.} \\ 
-          
-          & Deuteronomy 1--11               & Moberly 1        & 30 Sep.     \\
-          & Deuteronomy 12--26              &                  &  2 Oct.     \\
-          
-          & Deuteronomy 27--34              & Moberly 2        &  7 Oct.     \\ [1ex]
+		& Genesis 1--11                   & Heschel (begin)  & 15 Jan.        \\
+		& Genesis 12--36                  &                  &                \\
 
-    \unit{In the Land} \\
+		& Genesis 37--50                  &                  & 22 Jan.        \\
+		& Exodus 1--6, 32--34             &                  &                \\ [1ex]
 
-          & Joshua 1--13:7, 22--24          &                  &  9 Oct.     \\
-          
-          & Judges 1--16, 19--21            & Moberly 4        & 14 Oct.     \\
-          & 1 Samuel 1--15                  &                  & 16 Oct.     \\
-          
-          & \textbf{Midterm Exam} (given in class) &           & 21 Oct.     \\
-    \noclass{Reading Days}                                     & 23--24 Oct. \\
-    \reminder{\textbf{Take-home Essay Due} (submit PDF online)}{24 Oct.} \\
+	\unit{Out of Egypt} \\
 
-    
-          & 1 Samuel 16--31, 2 Samuel 1--12 &                  & 28 Oct.     \\
-          & 1 Kings 1--14                   &                  & 30 Oct.     \\
-          
-          & 2 Kings 17--25                  &                  &  4 Nov.     \\ [1ex]
-    \unit{Latter Prophets} \\
-          & Isaiah 1--12, 36--39            & Moberly 5        &  6 Nov.     \\
+		& Exodus 7--24                    & Moberly 3        & 29 Jan.        \\
+		& Exodus 20, Deuteronomy 5        & Heschel (finish) &                \\
+	\reminder{\textbf{Recitation of Psalm 8} (during Dr. Driver's office hours)}{\emph{from} 29 Jan.} \\
 
-          & Hosea 1--14, Joel 1--3          &                  & 11 Nov.     \\
-          & Amos 1--9, Obadiah, Jonah 1--4  & Moberly 6        & 13 Nov.     \\ [1ex]
-          
-    \unit{Wisdom \& Praise} \\
+		& Deuteronomy 1--11               & Moberly 1        &  5 Feb.        \\
+		& Deuteronomy 12--26              &                  &                \\
 
-          & Job 1--11                       &                  & 18 Nov.     \\
-          & Job 27--31, 38--42              & Moberly 8        & 20 Nov.     \\ 
-          
-          & Ecclesiastes 1--12              &                  & 25 Nov.     \\
-          & Psalms 1--2, 44, 72--73, 89--90, 105--106, 150 & Moberly 7 & 27 Nov. \\ [1ex]
-          
-    \noclass{Reading Days}                                     & 2--3 Dec.   \\
-    \reminder{\textbf{Final Exam} (as schedule by the Registrar)}{4--11 Dec.} \\
-    \bottomrule
+		& Deuteronomy 27--34              & Moberly 2        & 12 Feb.        \\
+		& \textbf{Midterm Exam} (given in class) &           &                \\
+
+	\noclass{Reading Week}                                   & 19 Feb.        \\ [1ex]
+
+	\unit{In the Land} \\
+
+		& Joshua 1--13:7, 22--24          &                  & 26 Feb.        \\
+		& Judges 1--16, 19--21            & Moberly 4        &                \\
+
+		& 1 Samuel 1--15                  &                  &  5 Mar.        \\
+		& 1 Samuel 16--31, 2 Samuel 1--12 &                  &                \\
+
+		& 1 Kings 1--14                   &                  & 12 Mar.        \\
+		& 2 Kings 17--25                  &                  &                \\ [1ex]
+
+	\unit{Latter Prophets} \\
+
+		& Isaiah 1--12, 36--39            & Moberly 5        & 19 Mar.        \\
+		& Hosea, Joel, Amos               &                  &                \\
+
+		& Jonah 1--4                      & Moberly 6        & 26 Mar.        \\ [1ex]
+
+	\unit{Wisdom \& Praise} \\
+
+		& Ecclesiastes 1--12              &                  & \emph{also} 26 Mar. \\
+
+		& Psalms 1--2, 34, 44, 51, 150    & Moberly 7        &  2 Apr.        \\
+		& Psalms 72--73, 89--90, 104--106 &                  &                \\ [1ex]
+
+	\noclass{Reading Days}                                   & 6--7 Apr.      \\
+	\reminder{\textbf{Final Exam} (as schedule by the Registrar)}{8--15 Apr.} \\
+	\bottomrule
   \end{tabular}
   \caption{Schedule of Readings}
   \label{schedule}
 \end{table}
 
-See the \href{http://www.tyndale.ca/registrar/important-dates}{Registrar's
-website} for a list of other important dates. The last day to add a class, or
-to drop one without penalty, is ordinarily the end of the term's second week.
+See the Registrar's website for a list of other
+\href{http://www.tyndale.ca/registrar/important-dates}{important dates}.
+The last day to add a class, or to drop one without penalty, is
+ordinarily the end of the term's second week.
 
 \section{Course Bibliography}
 \label{bibliography}
 
 An introductory bibliography is provided at the end of each page of
-notes in the coursepack. Pursue this material as your interest
-dictates, or if you wish to check my handling of any of the material I
-present. Pay special attention to items flagged as supplementary reading
+notes in the coursepack. Pursue this material as your interest dictates,
+or if you wish to check my handling of any of the material I present.
+Pay special attention to items flagged as supplementary reading
 (Section~\ref{supplementary}).
 
 \end{document}
